Fix footer render glitch on iOS for MWS30

--- a/apps/mws30/src/app/app.component.scss
+++ b/apps/mws30/src/app/app.component.scss
@@ -15,6 +15,7 @@ header {
 }
 
 footer {
+  z-index: 1;
   height: 20px;
   display: flex;
   position: fixed;
